# serialize

./: .README.md.swp  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  MemDevice.hpp  MsgArchive.hpp  SharedBuffer.hpp  main.cpp
src/test/: ArchiveTest.cpp  CMakeLists.txt  MemDeviceTest.cpp  MsgArchiveTest.cpp
